# wrench

./: Cargo.toml  \
src/: buffer_types.rs  engine.rs  error.rs  lib.rs  scene.rs  shaders.rs  tests.rs  types.rs  vertex.rs
src/assets/: light.rs  material.rs  mesh.rs  mod.rs  texture.rs  transform.rs
src/components/: camera.rs  event_handler.rs  light.rs  mesh.rs  mod.rs  model.rs  transform.rs
src/engine/: default_engine.rs  engine.rs  mod.rs
src/shaders/: fragment.glsl  fragment.rs  mod.rs  shaders.rs  vertex.glsl  vertex.rs
src/shaders/depth/: fragment.glsl  fragment.rs  vertex.glsl  vertex.rs
wecs/src/: component.rs  entity.rs  lib.rs  tests.rs  world.rs
wecs_derive/: Cargo.toml
wecs_derive/src/: entity.rs  lib.rs
wecs_derive/wecs/: Cargo.toml
wecs_derive/wecs/src/: component.rs  entity.rs  lib.rs  registry.rs  world.rs
wecs_derive/wecs/wecs_derive/src/: entity.rs
