[package]
name = "wrench"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
obj-rs = "0.7.0"
png = "0.17.2"
vulkano = "0.26.0"
vulkano-shaders = "0.26.0"
vulkano-win = "0.26.0"
wecs = { path = "wecs" }
wecs_derive = { path = "wecs_derive" }
winit = "0.25.0"
